--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,5 +13,7 @@
 @import 'blocks/header';
 @import 'blocks/buttons';
 @import 'blocks/advantages';
-@import 'blocks/headers';
+@import 'blocks/title';
 @import 'base/media';
+@import 'blocks/consultation';
+@import 'blocks/forms';
