--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -24,6 +24,7 @@
     .container {
         width: 768px;
     }
+   
 }
 @media ( max-width: 767px ) {
     .header {
@@ -105,12 +106,25 @@
     }
     .title {
         font-size: 24px;
+        &_consult {
+            font-size: 16px;
+            text-align: center;
+        }
     }
     .advantages {
         &__icon {
             span {
                 margin: 5px 0 8px 0;
             }
+        }
+    }
+    .consultation {
+        .consultation__desc {
+            font-size: 14px;
+            text-align: center;
+        }
+        .feed-form {
+            width: 100%;
         }
     }
 }
