--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -1,5 +1,21 @@
 @media ( max-width: 1200px ) {
-
+    body {
+        .carousel {
+            .tns-outer {
+                img {
+                    width: 80%;
+                } 
+            }
+            .prev, .next {
+                top: 105%;
+                left: 420px;
+            }
+            .next {
+                left: auto;
+                right: 420px;
+            }
+        }
+    }
 }
 @media ( max-width: 991px ) {
     .header {
@@ -23,6 +39,18 @@
 
     .container {
         width: 768px;
+    }
+
+    .carousel {
+        .prev, .next {
+            display: none;
+        }
+    }
+
+    .catalog {
+        &__content {
+            justify-content: space-around;
+        }
     }
    
 }
@@ -57,12 +85,20 @@
     .container {
         width: 576px;
     }
+
     .promo {
         &__header {
             font-size: 36px;
         }
         &__subheader {
             font-size: 18px;
+        }
+    }
+
+    .catalog {
+        .catalog__tab {
+            width: 156px;
+            font-size: 15px;
         }
     }
 }
@@ -125,6 +161,26 @@
         }
         .feed-form {
             width: 100%;
+        }
+    }
+
+    .catalog {
+        .title {
+            font-size: 22px;
+        }
+        .catalog__tabs {
+            flex-direction: column;
+        }
+        .catalog__tab {
+            width: 200px;
+            margin-bottom: 5px;
+            transform: skewX(0deg);
+            div {
+                transform: skewX(0deg)
+            }
+            &:nth-child(3) {
+                margin-bottom: 0;
+            }
         }
     }
 }
