--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -39,7 +39,7 @@
     &__content {
         margin-top: 60px; 
         display: none;
-        justify-content: space-between;
+        // justify-content: space-between;
         flex-wrap: wrap;
         &_active {
             display: flex;
@@ -49,6 +49,8 @@
     &-item {
         width: 300px;
         min-height: 440px;
+        margin-right: 8px;
+        margin-left: 8px;
         border: 2px solid #e8e8e8;
         padding: 20px 20px 26px 20px;
         overflow: hidden;
